--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,42 @@
-.App {
-  text-align: center;
+img {
+  width: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.image-container {
+  margin: 2em 0 2em 0;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.item-img {
+  height: 350px;
+  width: 340px;
+  border-radius: 3%;
 }
 
-.App-title {
-  font-size: 1.5em;
+.landing {
+  position: relative;
+  background: url("./img/showcase.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  /* margin-top: -24px; */
+  /* margin-bottom: -50px; */
 }
 
-.App-intro {
-  font-size: large;
+.landing-inner {
+  padding-top: 80px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.dark-overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.image-container {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
 }
