added qty to items and to basket items, and adjusted total price

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,7 @@ img {
 .item-img {
   height: 350px;
   width: 340px;
-  border-radius: 3%;
+  border-radius: 15px;
 }
 
 .item-display {
@@ -20,7 +20,7 @@ img {
     "picture info";
   grid-template-columns: repeat(2, 1fr);
   margin: 2em 0 2em 0;
-  border-radius: 3%;
+  border-radius: 15px;
   padding: 1em;
 }
 
@@ -32,13 +32,13 @@ img {
 
 .item-display-info {
   padding: 1em;
-  border-radius: 0%;
+  border-radius: 15px;
   grid-area: info;
   margin-top: 2em;
 }
 
 .item-display-image img {
-  border-radius: 0%;
+  border-radius: 15px;
 }
 
 .basket-image {
@@ -76,7 +76,7 @@ img {
 }
 
 .basket-total {
-  border-radius: 3%/10%;
+  border-radius: 15px;
   padding: 2em;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
